done with the assignment 2

--- a/langgraph/assignment 2.ipynb
+++ b/langgraph/assignment 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d96706b3",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "# Basic Modules\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "from docx import Document as DocxDocument\n",
     "\n",
     "# Data Ingestion Modules\n",
     "from langchain_core.documents import Document\n",
@@ -25,7 +26,15 @@
     "from langchain_astradb import AstraDBVectorStore\n",
     "\n",
     "# Model\n",
-    "from langchain_google_genai import  ChatGoogleGenerativeAI\n"
+    "from langchain_google_genai import  ChatGoogleGenerativeAI\n",
+    "\n",
+    "# Prompt Template\n",
+    "from langchain import hub\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "# Parsers\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough\n"
    ]
   },
   {
@@ -995,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "a93c7cc7",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1012,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Abayomi\\AppData\\Local\\Temp\\ipykernel_20760\\3053967035.py:5: DeprecationWarning: Retrievers must implement abstract `_get_relevant_documents` method instead of `get_relevant_documents`\n",
+      "C:\\Users\\Abayomi\\AppData\\Local\\Temp\\ipykernel_20760\\934635402.py:6: DeprecationWarning: Retrievers must implement abstract `_get_relevant_documents` method instead of `get_relevant_documents`\n",
       "  class ScoredSearchRetriever(BaseRetriever):\n"
      ]
     }
@@ -1012,35 +1021,35 @@
     "from langchain.schema.retriever import BaseRetriever\n",
     "from langchain.schema import Document\n",
     "from typing import List, Tuple, Any\n",
+    "import time\n",
     "\n",
     "class ScoredSearchRetriever(BaseRetriever):\n",
-    "    def __init__(self, vectorstore, search_type: str = \"similarity\", search_kwargs: dict = None):\n",
-    "        self.vectorstore = vectorstore\n",
-    "        self.search_type = search_type\n",
-    "        self.search_kwargs = search_kwargs or {\"k\": 4}\n",
+    "    vectorstore:AstraDBVectorStore\n",
+    "    k: int\n",
+    "    search_type: str\n",
     "\n",
     "    def get_relevant_documents(self, query: str) -> List[Document]:\n",
     "        # Standard interface: return only docs\n",
     "        return [\n",
     "            doc for doc, _ in self.vectorstore.similarity_search_with_score(\n",
-    "                query, **self.search_kwargs\n",
+    "                query, self.k\n",
     "            )\n",
     "        ]\n",
     "\n",
     "    def get_documents_with_scores(self, query: str) -> List[Tuple[Document, float]]:\n",
     "        # Internal logic based on search_type\n",
     "        if self.search_type == \"similarity\":\n",
-    "            return self.vectorstore.similarity_search_with_score(query, **self.search_kwargs)\n",
+    "            return self.vectorstore.similarity_search_with_score(query, self.k)\n",
     "\n",
     "        elif self.search_type == \"mmr\":\n",
     "            return [\n",
     "                (doc, None) for doc in self.vectorstore.max_marginal_relevance_search(\n",
-    "                    query, **self.search_kwargs\n",
+    "                    query, self.k\n",
     "                )\n",
     "            ]\n",
     "\n",
     "        elif self.search_type == \"similarity_score_threshold\":\n",
-    "            return self.vectorstore.similarity_search_with_score(query, **self.search_kwargs)\n",
+    "            return self.vectorstore.similarity_search_with_score(query, self.k)\n",
     "\n",
     "        else:\n",
     "            raise ValueError(f\"Unsupported search_type: {self.search_type}\")"
@@ -1048,48 +1057,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "id": "02c4ca0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evalautor(testing, query, search_type, k):\n",
+    "    start = time.time()\n",
+    "    retriever = ScoredSearchRetriever(vectorstore=vector_store, k=k, search_type=search_type)\n",
+    "    # Get documents only\n",
+    "    # docs = retriever.get_relevant_documents(query=query)\n",
+    "    if testing == True and query :\n",
+    "        docs_with_scores = retriever.get_documents_with_scores(query=query)\n",
+    "        end = time.time()\n",
+    "\n",
+    "        print(f\"\\n[{search_type}]\")\n",
+    "        print(f\"Retrieved {len(docs_with_scores)} results in {end - start:.4f} seconds.\")\n",
+    "\n",
+    "        # Or get documents with scores\n",
+    "        \"\"\"assignment 2.ipynb\"for doc, score in docs_with_scores:\n",
+    "            print(f\"Doc: {doc.page_content}\")\n",
+    "            print(f\"Score: {score}\\n\")\n",
+    "            \"\"\"\n",
+    "    if testing == False: return retriever"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "f3fc91f0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "\"ScoredSearchRetriever\" object has no field \"vectorstore\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m retriever = \u001b[43mScoredSearchRetriever\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mvectorstore\u001b[49m\u001b[43m=\u001b[49m\u001b[43mvector_store\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43msearch_type\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43msimilarity\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# or \"mmr\", \"similarity_score_threshold\"\u001b[39;49;00m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43msearch_kwargs\u001b[49m\u001b[43m=\u001b[49m\u001b[43m{\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mk\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m}\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mScoredSearchRetriever.__init__\u001b[39m\u001b[34m(self, vectorstore, search_type, search_kwargs)\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, vectorstore, search_type: \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33msimilarity\u001b[39m\u001b[33m\"\u001b[39m, search_kwargs: \u001b[38;5;28mdict\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mvectorstore\u001b[49m = vectorstore\n\u001b[32m      8\u001b[39m     \u001b[38;5;28mself\u001b[39m.search_type = search_type\n\u001b[32m      9\u001b[39m     \u001b[38;5;28mself\u001b[39m.search_kwargs = search_kwargs \u001b[38;5;129;01mor\u001b[39;00m {\u001b[33m\"\u001b[39m\u001b[33mk\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m4\u001b[39m}\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Abayomi\\Desktop\\Agentic Artificial Intelligence\\Agentic AI tasks\\venv\\Lib\\site-packages\\pydantic\\main.py:997\u001b[39m, in \u001b[36mBaseModel.__setattr__\u001b[39m\u001b[34m(self, name, value)\u001b[39m\n\u001b[32m    995\u001b[39m     setattr_handler(\u001b[38;5;28mself\u001b[39m, name, value)\n\u001b[32m    996\u001b[39m \u001b[38;5;66;03m# if None is returned from _setattr_handler, the attribute was set directly\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m997\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m (setattr_handler := \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_setattr_handler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    998\u001b[39m     setattr_handler(\u001b[38;5;28mself\u001b[39m, name, value)  \u001b[38;5;66;03m# call here to not memo on possibly unknown fields\u001b[39;00m\n\u001b[32m    999\u001b[39m     \u001b[38;5;28mself\u001b[39m.__pydantic_setattr_handlers__[name] = setattr_handler\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Abayomi\\Desktop\\Agentic Artificial Intelligence\\Agentic AI tasks\\venv\\Lib\\site-packages\\pydantic\\main.py:1044\u001b[39m, in \u001b[36mBaseModel._setattr_handler\u001b[39m\u001b[34m(self, name, value)\u001b[39m\n\u001b[32m   1041\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mcls\u001b[39m.__pydantic_fields__:\n\u001b[32m   1042\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m.model_config.get(\u001b[33m'\u001b[39m\u001b[33mextra\u001b[39m\u001b[33m'\u001b[39m) != \u001b[33m'\u001b[39m\u001b[33mallow\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m   1043\u001b[39m         \u001b[38;5;66;03m# TODO - matching error\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1044\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mcls\u001b[39m.\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m object has no field \u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m   1045\u001b[39m     \u001b[38;5;28;01melif\u001b[39;00m attr \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   1046\u001b[39m         \u001b[38;5;66;03m# attribute does not exist, so put it in extra\u001b[39;00m\n\u001b[32m   1047\u001b[39m         \u001b[38;5;28mself\u001b[39m.__pydantic_extra__[name] = value\n",
-      "\u001b[31mValueError\u001b[39m: \"ScoredSearchRetriever\" object has no field \"vectorstore\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[mmr]\n",
+      "Retrieved 2 results in 1.7610 seconds.\n",
+      "\n",
+      "[similarity]\n",
+      "Retrieved 2 results in 0.5985 seconds.\n",
+      "\n",
+      "[similarity_score_threshold]\n",
+      "Retrieved 2 results in 0.5702 seconds.\n"
      ]
     }
    ],
    "source": [
-    "retriever = ScoredSearchRetriever(\n",
-    "    vectorstore=vector_store,\n",
-    "    search_type=\"similarity\",  # or \"mmr\", \"similarity_score_threshold\"\n",
-    "    search_kwargs={\"k\": 5}\n",
+    "query = \"What is Machine Learning?\"\n",
+    "search_types = [\"mmr\", \"similarity\", \"similarity_score_threshold\"]\n",
+    "for search_type in search_types:\n",
+    "    evalautor(testing=True, query=query, search_type=search_type, k=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "c8337914",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ScoredSearchRetriever(vectorstore=<langchain_astradb.vectorstores.AstraDBVectorStore object at 0x0000021967F0C710>, k=3, search_type='similarity')"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retriever = evalautor(testing=False, query=None, search_type=\"similarity\", k=3)\n",
+    "retriever"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "5cd3133b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=ChatGoogleGenerativeAI(model='gemini-1.5-flash')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "c5338464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "bb9c7339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt=PromptTemplate(\n",
+    "    template=\"\"\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"\"\",\n",
+    "    input_variables=['context', 'question']\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f3fc91f0",
+   "execution_count": 87,
+   "id": "fd080310",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get documents only\n",
-    "docs = retriever.get_relevant_documents(\"What is LangChain used for?\")\n",
+    "rag_chain = (\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+    "    | prompt\n",
+    "    | model\n",
+    "    | StrOutputParser()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "4d9898fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Machine learning is a subfield of computer science stemming from pattern recognition and computational learning theory in AI.  It involves using statistical methods to create programs that improve performance over time or detect patterns in large datasets.  Alternatively, it's been defined as giving computers the ability to learn without explicit programming.\""
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_query = \"What is Machine Learning?\"\n",
+    "answer = rag_chain.invoke(new_query)\n",
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "696a5d4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "# Or get documents with scores\n",
-    "docs_with_scores = retriever.get_documents_with_scores(\"What is LangChain used for?\")\n",
-    "for doc, score in docs_with_scores:\n",
-    "    print(f\"Doc: {doc.page_content}\")\n",
-    "    print(f\"Score: {score}\\n\")"
+    "doc = DocxDocument()\n",
+    "doc.add_heading(new_query, level=1)\n",
+    "doc.add_paragraph(answer)\n",
+    "doc.save(\"answer.docx\")"
    ]
   }
  ],
